[tool.poetry]
name = "codaio"
version = "0.6.5"
description = "Python wrapper for Coda.io API"
authors = ["MB <mb@blaster.ai>"]
license = "MIT"
readme='README.md'
homepage='https://github.com/Blasterai/codaio'
documentation='https://codaio.readthedocs.io/en/latest/index.html'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
attrs = "^19.1"
python-dateutil = "^2.8"
inflection = "^0.3.1"
envparse = "^0.2.0"
decorator = "^4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pydoc-markdown = "^2.0"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
pylint = "^2.4.4"
pytest-coverage = "^0.0"
coverage = {version = "^5.0.3", extras = ["toml"]}
black = {version = "^19.10b0", allow-prereleases = true}
responses = "^0.10.9"
nox = "^2020.8.22"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["codaio"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

